--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,39 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>html-pdf-test</title>
-        <link rel="stylesheet" href="./index.css">
-    </head>
-    <body>
-        <h1>html-pdf-test</h1>
-        <h2>aaaaaaaaaaaaaaaa</h2>
-    </body>
+  <head>
+  <style>
+    body {
+      padding: 1cm;
+    }
+
+    h1 {
+        color: red;
+    }
+
+    .jumbotron {
+      background: #F0F0F0!important;
+    }
+
+    .btn {
+      background: rgb(66,133,243)!important;
+    }
+  </style>
+  <body>
+    <div id="pageHeader">
+      <div class="container">
+        <br/>
+        <span class="label label-default">With external css</span>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Navbar example</h1>
+        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+        <p>To see the difference between static and fixed top navbars, just scroll.</p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs &raquo;</a>
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
