update:フルパス指定　iframe追加

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,7 @@
 <html>
   <head>
-  <style>
-    body {
-      padding: 1cm;
-    }
-
-    h1 {
-        color: red;
-    }
-
-    .jumbotron {
-      background: #F0F0F0!important;
-    }
-
-    .btn {
-      background: rgb(66,133,243)!important;
-    }
-  </style>
+    <link rel="stylesheet" type="text/css" href="https://pdf-trial.herokuapp.com/index.css">
+  </head>
   <body>
     <div id="pageHeader">
       <div class="container">
@@ -35,5 +20,8 @@
         </p>
       </div>
     </div>
+    <iframe src="./iframe/index.html" frameborder="1"></iframe>
+    <a href="./index.pdf" download="sample.pdf">PDF</a>
+
   </body>
 </html>
