--- a/public/iframe/index.html
+++ b/public/iframe/index.html
@@ -1,11 +1,13 @@
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="https://pdf-trial.herokuapp.com/index.css">
+  </head>
   <body>
     <div class="container">
       <div class="jumbotron">
         <h1>Inline Frame</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
+        <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
       </div>
     </div>
   </body>
