update:iframe読み先変更

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
     </div>
-    <iframe src="./iframe/index.html" frameborder="1"></iframe>
+    <iframe src="https://www.shinseibank.com" frameborder="1"></iframe>
     <a href="./index.pdf" download="sample.pdf">PDF</a>
 
   </body>
