--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,7 @@
         </p>
       </div>
     </div>
-    <iframe src="https://www.shinseibank.com" frameborder="1"></iframe>
+    <iframe src="https://www.shinseibank.com"></iframe>
     <a href="./index.pdf" download="sample.pdf">PDF</a>
-
   </body>
 </html>
