--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
       </div>
     </div>
     <iframe src="https://www.shinseibank.com"></iframe>
-    <a href="./index.pdf" download="sample.pdf">PDF</a>
+    <a href="https://mybucketeer.s3-ap-northeast-1.amazonaws.com/some_file_name.pdf" download="sample.pdf">PDF</a>
   </body>
 </html>
