--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
       <div class="jumbotron">
         <h1>PDF example page</h1>
         <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-        <p>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+        <p>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
         <p>
           <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>
       </div>
     </div>
-    <iframe src="https://www.shinseibank.com"></iframe>
+    <iframe src="https://www.shinseibank.com/powerflex/structure/?intcid=mega_pdb_000_04"></iframe>
     <a href="https://mybucketeer.s3-ap-northeast-1.amazonaws.com/some_file_name.pdf" download="sample.pdf">PDF</a>
   </body>
 </html>
