--- a/public/image.html
+++ b/public/image.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <img src="https://bucketeer-c8a7d0b9-76c0-4feb-9eed-a0cca5e04681.s3.amazonaws.com/public/backup/api/v1/banner/key_gaika_otameshiGaika02_w" alt="">
+        <img src="https://mybucketeer.s3-ap-northeast-1.amazonaws.com/PDF_image.png" alt="">
     </body>
 </html>
