--- a/public/image.html
+++ b/public/image.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <img src="https://mybucketeer.s3-ap-northeast-1.amazonaws.com/PDF_image.png" alt="">
+        <img src="./PDF_image.png" alt="">
     </body>
 </html>
