--- a/public/image.html
+++ b/public/image.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <img src="./PDF_image.png" alt="">
     </body>
