--- a/public/image.html
+++ b/public/image.html
@@ -4,5 +4,9 @@
     </head>
     <body>
         <img src="./PDF_image.png" alt="">
+        <img src="./PDF_image.png" alt="">
+        <img src="./PDF_image.png" alt="">
+        <img src="./PDF_image.png" alt="">
+        <img src="./PDF_image.png" alt="">
     </body>
 </html>
