--- a/public/image.html
+++ b/public/image.html
@@ -1,12 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="http://localhost:4000/style.css">
     </head>
     <body>
-        <img src="./PDF_image.png" alt="">
-        <img src="./PDF_image.png" alt="">
-        <img src="./PDF_image.png" alt="">
-        <img src="./PDF_image.png" alt="">
-        <img src="./PDF_image.png" alt="">
+        <img src="http://localhost:4000/PDF_image.png" alt="">
     </body>
 </html>
