--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,27 @@
 <html>
-    <head>
-      <link rel="stylesheet" href="http://localhost:4000/style.css">
-    </head>
-    <body>
-        <img src="http://localhost:4000/PDF_image.png" alt="">
-        <img src="http://localhost:4000/PDF_image.png" alt="">
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="https://pdf-trial.herokuapp.com/index.css">
+  </head>
+  <body>
+    <div id="pageHeader">
+      <div class="container">
+        <br/>
+        <span class="label label-default">pdf-trial</span>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="jumbotron">
+        <h1>PDF example page</h1>
+        <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p>あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs &raquo;</a>
+        </p>
+      </div>
+    </div>
+    <var></var>
+    <iframe src="https://heroku-network-test01.herokuapp.com/"></iframe>
+    <a href="https://mybucketeer.s3-ap-northeast-1.amazonaws.com/some_file_name.pdf" download="sample.pdf">PDF</a>
+  </body>
 </html>
